--- a/hsreplayarchive/web/templates/web/home.html
+++ b/hsreplayarchive/web/templates/web/home.html
@@ -1,6 +1,5 @@
-{% extends "web/base.html" %}
-
-{% load staticfiles %}
+{% extends "base.html" %}
+{% load static from staticfiles %}
 
 {% block stylesheets %}
     {{ block.super }}
