First working example of bootstrapping Joust

--- a/hsreplayarchive/joust/templates/joust/replay_detail.html
+++ b/hsreplayarchive/joust/templates/joust/replay_detail.html
@@ -8,8 +8,15 @@
 {% block content %}
 
 <link href="{% static 'joust/joust.css' %}" rel="stylesheet">
-
-<div id="container"></div>
 <script src="{% static 'joust/bundle.js' %} "></script>
+<div id="container"></div>
+
+<script>
+    var replay_url = '{{ replay_data_url }}';
+    var static_assets_root = '{% static 'joust/images/' %}';
+    Joust.renderHSReplay('container', replay_url, {width: 500, height: 500, assetDirectory: '{% static 'joust/images/' %}'});
+</script>
+
+
 
 {% endblock content %}
