Add list page to view all uploaded replays

--- a/hsreplayarchive/templates/base.html
+++ b/hsreplayarchive/templates/base.html
@@ -40,6 +40,12 @@
                 <a class="navbar-brand" href="/">HSReplayArchive</a>
             </div>
 
+            <ul class="nav navbar-nav">
+                <li> <a href="{% url 'joust_replay_list' %}">Joust</a> </li>
+
+
+            </ul>
+
         </div> <!-- /.container-fluid -->
     </nav>
     <div id="content">
