--- a/hsreplayarchive/joust/templates/joust/replay_detail.html
+++ b/hsreplayarchive/joust/templates/joust/replay_detail.html
@@ -10,9 +10,11 @@
 <link href="{% static 'joust/joust.css' %}" rel="stylesheet">
 <script src="{% static 'joust/bundle.js' %} "></script>
 
+<a href="{{ replay_data_url }}">Raw Replay File</a>
 <div id="container"></div>
+
 <script>
-    Joust.viewer('container').height(500).width(500).assets('{% static 'joust/assets/' %}').fromUrl('{{ replay_data_url }}');
+    Joust.viewer('container').height(500).width(800).assets('{% static 'joust/assets/' %}').fromUrl('{{ replay_data_url }}');
 </script>
 
 
