--- a/hsreplayarchive/templates/base.html
+++ b/hsreplayarchive/templates/base.html
@@ -14,6 +14,7 @@
     <!-- Bootstrap -->
       {% block stylesheets %}
           <link href="{% static 'web/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+          <link href="{% static 'web/hsreplayarchive.css' %}" rel="stylesheet">
       {% endblock stylesheets %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
