--- a/hsreplayarchive/templates/base.html
+++ b/hsreplayarchive/templates/base.html
@@ -38,7 +38,9 @@
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">HSReplayArchive</a>
+                <a class="navbar-brand" href="/">
+                    <img alt="HSReplay.net" src="{% static 'web/images/hearthsim_logo.png' %}"/>
+                </a>
             </div>
 
             <ul class="nav navbar-nav">
