Hiding brand logo

--- a/hsreplayarchive/templates/base.html
+++ b/hsreplayarchive/templates/base.html
@@ -39,7 +39,7 @@
                     <span class="icon-bar"></span>
                 </button>
                 <a class="navbar-brand" href="/">
-                    <img alt="HSReplay.net" src="{% static 'web/images/hearthsim_logo.png' %}"/>
+                    HSReplay.net
                 </a>
             </div>
 
