Add reset password by email system

--- a/hsreplayarchive/user/templates/user/password_reset_complete.html
+++ b/hsreplayarchive/user/templates/user/password_reset_complete.html
@@ -4,12 +4,9 @@
 {% block content %}
     <div class="">
         <div class="">
+            <p>Your password has been reset.</p>
+            <p>Log in below using your new password.</p>
             {% include "user/login_form.html" %}
         </div>
-    </div>
-    <div>
-        <ul>
-            <li><a href="{% url 'dj-auth:pw_reset_start' %}">Forgotten password?</a></li>
-        </ul>
     </div>
 {% endblock %}
