Switch to using django-allauth

--- a/hsreplayarchive/templates/base.html
+++ b/hsreplayarchive/templates/base.html
@@ -49,11 +49,17 @@
 
             </ul>
 
+            <!-- -->
             {% if user.is_authenticated %}
-                <p class="navbar-text navbar-right"><a href="{% url 'dj-auth:logout' %}?next={{ request.path }}" class="navbar-link" style="margin-right: 5px;">Log Out</a></p>
+                <p class="navbar-text navbar-right">
+                    Logged in as {{ user.username }} (<a href="{% url 'account_logout' %}" class="navbar-link" style="margin-right: 5px;">Log Out</a>)
+                </p>
             {% else %}
-                <p class="navbar-text navbar-right"><a href="{% url 'dj-auth:login' %}?next={{ request.path }}" class="navbar-link" style="margin-right: 5px;">Log In</a></p>
+                <p class="navbar-text navbar-right">
+                    <a href="{% url 'account_login' %}" class="navbar-link" style="margin-right: 5px;">Log In</a> or  <a href="{% url 'account_signup' %}" class="navbar-link" style="margin-right: 5px;">Sign up</a>
+                </p>
             {% endif %}
+
         </div> <!-- /.container-fluid -->
     </nav>
     <div id="content">
