--- a/hsreplaynet/web/templates/web/home.html
+++ b/hsreplaynet/web/templates/web/home.html
@@ -15,7 +15,7 @@
         HSReplays can be uploaded by placing the replay data directly into the POST body. For example:
         <pre>
             POST /api/v1/replay/upload HTTP/1.1
-            Host: www.hsreplayarchive.org
+            Host: www.hsreplay.net
 
             &lt;HSReplay version="1.0"&gt;
                 &lt;Game ts="2016-02-06T04:50:33" type="7"&gt;
@@ -31,13 +31,13 @@
         <pre>
             HTTP/1.1 201 CREATED
             Date: Mon, 8 February 2016 22:38:34 GMT
-            Location: http://www.hsreplayarchive.org/api/v1/replay/27258f76-c180-4b4f-99e4-8ad949a17eb7
+            Location: http://www.hsreplay.net/api/v1/replay/27258f76-c180-4b4f-99e4-8ad949a17eb7
 
         </pre>
         <p>The replay can be retrieved again via a simple GET to the URI provided in the uploaded response.</p>
         <pre>
             GET /api/v1/replay/27258f76-c180-4b4f-99e4-8ad949a17eb7 HTTP/1.1
-            Host: www.hsreplayarchive.org
+            Host: www.hsreplay.net
         </pre>
         <p>If the server responds with a 200 then the replay XML will be included exactly as it was uploaded in the response body.</p>
         <pre>
