--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -21,7 +21,8 @@
     <script src="{% static 'web/jquery.min.js' %} "></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="{% static 'web/bootstrap/js/bootstrap.min.js' %}"></script>
-
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/react/0.14.7/react-dom.min.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
@@ -45,8 +46,6 @@
 
             <ul class="nav navbar-nav">
                 <li> <a href="{% url 'joust_replay_list' %}">Joust</a> </li>
-
-
             </ul>
 
             <!-- -->
