Add Battle.net OAuth implementation

--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -8,13 +8,13 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
 
     {% block title %}
-        <title>HSReplayArchive</title>
+        <title>HSReplay.net</title>
     {% endblock title %}
 
     <!-- Bootstrap -->
       {% block stylesheets %}
           <link href="{% static 'web/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-          <link href="{% static 'web/hsreplayarchive.css' %}" rel="stylesheet">
+          <link href="{% static 'web/hsreplaynet.css' %}" rel="stylesheet">
       {% endblock stylesheets %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
