Modify joust static asset serving path

--- a/hsreplaynet/joust/templates/joust/replay_detail.html
+++ b/hsreplaynet/joust/templates/joust/replay_detail.html
@@ -7,8 +7,8 @@
 
 {% block content %}
 
-<link href="{% static 'joust/joust.css' %}" rel="stylesheet">
-<script src="{% static 'joust/bundle.js' %} "></script>
+<link href="/static/joust/joust.css" rel="stylesheet">
+<script src="/static/joust/bundle.js"></script>
 
 <a href="{{ replay_data_url }}">Raw Replay File</a>
 <div id="container"></div>
