Cosmetic change to confirm continuous deployment

--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -45,7 +45,7 @@
             </div>
 
             <ul class="nav navbar-nav">
-                <li> <a href="{% url 'joust_replay_list' %}">Joust</a> </li>
+                <li> <a href="{% url 'joust_replay_list' %}">Watch Via Joust</a> </li>
             </ul>
 
             <!-- -->
