--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -62,7 +62,9 @@
         </div> <!-- /.container-fluid -->
     </nav>
     <div id="content">
-        {% block content %}{% endblock content %}
+        {% block content %}
+
+        {% endblock content %}
     </div>
   </body>
 </html>
