--- a/hsreplaynet/web/static/web/hsreplaynet.css
+++ b/hsreplaynet/web/static/web/hsreplaynet.css
@@ -7,3 +7,10 @@ table, th, td {
 th, td {
     padding: 5px;
 }
+
+
+#tabletop {
+    background:url("images/STW_Table2.jpg") no-repeat center center;
+    height: 600px;
+    background-size:100% auto;
+}
