--- a/hsreplaynet/joust/templates/joust/replay_list.html
+++ b/hsreplaynet/joust/templates/joust/replay_list.html
@@ -6,23 +6,27 @@
 {% endblock stylesheets %}
 
 {% block content %}
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-xs-12">
+            <table class="table table-hover table-condensed table-responsive" >
+                <tr>
+                    <th>Replay</th>
+                    <th>Match Date</th>
+                    <th>First Player Name</th>
+                    <th>Second Player Name</th>
+                </tr>
+                {% for replay in replays %}
+                    <tr>
+                        <td><a href="{{ replay.get_absolute_url }}">{{ replay.id }}</a></td>
+                        <td>{{ replay.match_date }}</td>
+                        <td>{{ replay.player_1_name }}</td>
+                        <td>{{ replay.player_2_name }}</td>
+                    </tr>
 
-    <table style="width:100%">
-        <tr>
-            <th>Replay</th>
-            <th>Match Date</th>
-            <th>First Player Name</th>
-            <th>Second Player Name</th>
-        </tr>
-        {% for replay in replays %}
-            <tr>
-                <td><a href="{{ replay.get_absolute_url }}">{{ replay.id }}</a></td>
-                <td>{{ replay.match_date }}</td>
-                <td>{{ replay.player_1_name }}</td>
-                <td>{{ replay.player_2_name }}</td>
-            </tr>
-
-        {% endfor %}
-    </table>
-
+                {% endfor %}
+            </table>
+        </div>
+    </div>
+</div>
 {% endblock content %}
