--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -32,35 +32,46 @@
   </head>
 
   <body>
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
+  <div class="container-fluid">
+    <nav class="navbar navbar-default" role="navigation">
+
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#hsreplay-navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">
-                    HSReplay.net
-                </a>
+                <a class="navbar-brand" href="/">HSReplay.net</a>
+
             </div>
 
-            <ul class="nav navbar-nav">
-                <li> <a href="{% url 'joust_replay_list' %}">Joust</a> </li>
-            </ul>
+            <div id="hsreplay-navbar-collapse" class="collapse navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li><a href="{% url 'joust_replay_list' %}">Joust</a></li>
+                    <li><a href="">API</a></li>
 
-            <!-- -->
-            {% if user.is_authenticated %}
-                <p class="navbar-text navbar-right">
-                    Logged in as {{ user.username }} (<a href="{% url 'account_logout' %}" class="navbar-link" style="margin-right: 5px;">Log Out</a>)
-                </p>
-            {% else %}
-                <p class="navbar-text navbar-right">
-                    <a href="{% url 'account_login' %}" class="navbar-link" style="margin-right: 5px;">Log In</a> or  <a href="{% url 'account_signup' %}" class="navbar-link" style="margin-right: 5px;">Sign up</a>
-                </p>
-            {% endif %}
+                    {% if user.is_authenticated %}
+                        <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            Logged in as {{ user.username }}  <b class="caret"></b>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="{% url 'account_logout' %}">Log Out</a></li>
+                        </ul>
+                        </li>
+                    {% else %}
+                        <li><a href="{% url 'account_login' %}" class="navbar-link" >Log In / Sign Up</a></li>
+                    {% endif %}
 
+                </ul>
+            </div>
+
+
+</nav>
         </div> <!-- /.container-fluid -->
-    </nav>
+
     <div id="content">
         {% block content %}
 
