--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -15,6 +15,7 @@
     <!-- Bootstrap -->
       {% block stylesheets %}
           <link href="{% static 'web/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
+          <!-- hsreplaynet.css should come after all Bootstrap CSS -->
           <link href="{% static 'web/hsreplaynet.css' %}" rel="stylesheet">
       {% endblock stylesheets %}
 
@@ -51,7 +52,7 @@
             <div id="hsreplay-navbar-collapse" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
                     <li><a href="{% url 'joust_replay_list' %}">Joust</a></li>
-                    <li><a href="">API</a></li>
+                    <li><a href="{% url 'api_docs' %}">API</a></li>
 
                     {% if user.is_authenticated %}
                         <li class="dropdown">
