--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -51,8 +51,8 @@
 
             <div id="hsreplay-navbar-collapse" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="{% url 'joust_replay_list' %}">Joust</a></li>
-                    <li><a href="{% url 'api_docs' %}">API</a></li>
+                    <li><a href="{% url 'joust_replay_list' %}">Watch</a></li>
+                    <li><a href="{% url 'contribute' 'client' %}">Contribute</a></li>
 
                     {% if user.is_authenticated %}
                         <li class="dropdown">
