--- a/hsreplaynet/web/templates/web/download_client.html
+++ b/hsreplaynet/web/templates/web/download_client.html
@@ -2,11 +2,17 @@
 
 <div class="row">
     <div class="col-xs-12">
+        <p>Select an appropriate client for your operating system:</p>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-xs-12">
         <dl class="dl-horizontal">
           <dt>Windows:</dt>
           <dd><a href="https://github.com/Epix37/Hearthstone-Deck-Tracker/releases/latest">Hearthstone Deck Tracker</a></dd>
           <dt>OS X:</dt>
-          <dd>HSReplay.net OSX Upload Agent</dd>
+          <dd>HSReplay.net OSX Upload Agent <em>(coming soon)</em></dd>
         </dl>
     </div>
 </div>
