--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -66,7 +66,7 @@
                     {% else %}
                         <li><a href="{% provider_login_url "battlenet" %}" class="navbar-link" >
                             <img src="{% static 'web/images/bnet.png' %}"/>
-                            <span>Log in with Battle.net</span>
+                            <span>Log In with Battle.net</span>
                         </a></li>
                     {% endif %}
 
