--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -57,7 +57,8 @@
                     {% if user.is_authenticated %}
                         <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            Logged in as {{ user.username }}  <b class="caret"></b>
+                            <img src="{% static 'web/images/bnet.png' %}"/>
+                            <span>Logged in as {{ user.username }}</span> <b class="caret"></b>
                         </a>
                         <ul class="dropdown-menu">
                             <li><a href="{% url 'account_logout' %}">Log Out</a></li>
