Switch assets & textures to load through the static.hsreplay.net subdomain.

--- a/hsreplaynet/joust/templates/joust/replay_detail.html
+++ b/hsreplaynet/joust/templates/joust/replay_detail.html
@@ -49,8 +49,8 @@
         Joust.viewer('container')
             .height(600)
             .metadata(cb)
-            .assets('http://hsreplay.net/static/joust/assets/')
-            .textures('http://d1v38q31t6h93p.cloudfront.net/static/joust/textures/')
+            .assets('http://static.hsreplay.net/static/joust/assets/')
+            .textures('http://static.hsreplay.net/static/joust/textures/')
             .fromUrl('{{ replay_data_url }}');
 
     });
