--- a/hsreplaynet/joust/templates/joust/replay_list.html
+++ b/hsreplaynet/joust/templates/joust/replay_list.html
@@ -15,6 +15,7 @@
                     <th>Match Date</th>
                     <th>First Player Name</th>
                     <th>Second Player Name</th>
+                    <th>Upload Token</th>
                 </tr>
                 {% for replay in replays %}
                     <tr>
@@ -22,6 +23,7 @@
                         <td>{{ replay.match_date }}</td>
                         <td>{{ replay.player_1_name }}</td>
                         <td>{{ replay.player_2_name }}</td>
+                        <td>{{ replay.upload_token }}</td>
                     </tr>
 
                 {% endfor %}
