--- a/hsreplaynet/joust/templates/joust/replay_detail.html
+++ b/hsreplaynet/joust/templates/joust/replay_detail.html
@@ -10,18 +10,19 @@
 <link href="http://hsreplay.net/static/joust/joust.css" rel="stylesheet">
 <script src="http://hsreplay.net/static/joust/bundle.js"></script>
 
-<div class="container-fluid">
+<div class="container-fluid full_height">
     <div class="row">
         <div class="col-xs-12">
             <a href="{{ replay_data_url }}">Raw Replay File</a>
         </div>
     </div>
+
     <div id="tabletop" class="row">
-        <div class="col-xs-2"></div>
-        <div class="col-xs-8">
-            <div id="container"></div>
+
+        <div class="col-sm-offset-2 col-sm-8 col-xs-12 full_height">
+            <div id="joust-container" class="full_height"></div>
         </div>
-        <div class="col-xs-2"></div>
+
     </div>
 </div>
 
@@ -46,8 +47,8 @@
 
         }
 
-        Joust.viewer('container')
-            .height(600)
+        Joust.viewer('joust-container')
+
             .metadata(cb)
             .assets('http://static.hsreplay.net/static/joust/assets/')
             .textures('http://static.hsreplay.net/static/joust/textures/')
