--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -34,9 +34,9 @@
   </head>
 
   <body>
-  <div class="container-fluid">
-    <nav class="navbar navbar-default" role="navigation">
 
+    <nav class="navbar navbar-default" role="navigation">
+        <div class="container-fluid">
             <div class="navbar-header">
 
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#hsreplay-navbar-collapse">
@@ -54,6 +54,8 @@
                     <li><a href="{% url 'joust_replay_list' %}">Watch</a></li>
                     <li><a href="{% url 'contribute' 'client' %}">Contribute</a></li>
 
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
                     {% if user.is_authenticated %}
                         <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
@@ -70,13 +72,12 @@
                             <span>Log In with Battle.net</span>
                         </a></li>
                     {% endif %}
-
                 </ul>
             </div>
 
-
-</nav>
         </div> <!-- /.container-fluid -->
+</nav>
+
 
     <div id="content">
         {% block content %}
