--- a/hsreplaynet/web/static/web/hsreplaynet.css
+++ b/hsreplaynet/web/static/web/hsreplaynet.css
@@ -1,10 +1,22 @@
 
 #tabletop {
     background:url("images/STW_Table2.jpg") no-repeat center center;
-    height: 600px;
+    height: 100%;
     background-size: 100% auto;
 }
 
+.full_height {
+    height: 100%;
+}
+
+body,html{
+    height: 100%;
+}
+
+#content {
+    height: calc(100% - 100px);
+    min-height: 500px;
+}
 
 .homepage {
     background-image: url("images/Tavern_Brawl_Key_Art.jpg");
