--- a/hsreplaynet/web/templates/web/api_docs.html
+++ b/hsreplaynet/web/templates/web/api_docs.html
@@ -56,7 +56,11 @@
                 </div>
             </div>
             {% if not form.api_key.value %}
-            <button class="btn btn-primary btn-lg" type="submit">Request API Key</button>
+            <div class="form-group">
+                <div class="col-sm-6 col-sm-offset-2">
+                    <button class="btn btn-primary btn-lg" type="submit">Request API Key</button>
+                </div>
+            </div>
             {% endif %}
         </form>
     </div>
