--- a/hsreplaynet/joust/templates/joust/replay_detail.html
+++ b/hsreplaynet/joust/templates/joust/replay_detail.html
@@ -14,7 +14,7 @@
 
 <div id="tabletop" class="row">
 
-    <div class="col-sm-offset-2 col-sm-8 col-xs-12 full_height">
+    <div class="col-lg-offset-2 col-lg-8 col-xs-12 full_height">
         <div id="joust-container" class="full_height"></div>
     </div>
 
