Load static.hsreplay.net data from the same protocol

--- a/hsreplaynet/joust/templates/joust/replay_detail.html
+++ b/hsreplaynet/joust/templates/joust/replay_detail.html
@@ -76,8 +76,8 @@
 
         Joust.viewer('joust-container')
             .metadata(cb)
-            .assets('http://static.hsreplay.net/static/joust/assets/')
-            .textures('http://static.hsreplay.net/static/joust/textures/')
+            .assets("//static.hsreplay.net/static/joust/assets/")
+            .textures("//static.hsreplay.net/static/joust/textures/")
             .fromUrl('{{ replay_data_url }}');
 
     });
