--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -12,11 +12,11 @@
         <title>HSReplay.net</title>
     {% endblock title %}
 
-    <!-- Bootstrap -->
       {% block stylesheets %}
           <link href="{% static 'web/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
           <!-- hsreplaynet.css should come after all Bootstrap CSS -->
           <link href="{% static 'web/hsreplaynet.css' %}" rel="stylesheet">
+          <link href="{% static 'web/home.css' %}" rel="stylesheet">
       {% endblock stylesheets %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
@@ -30,7 +30,6 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-
   </head>
 
   <body>
