Add missing import for social tags.

--- a/hsreplaynet/web/templates/web/home.html
+++ b/hsreplaynet/web/templates/web/home.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
+{% load socialaccount %}
 {% block content %}
 <div id="main">
 	<header>
