--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -16,7 +16,7 @@
           <link href="{% static 'web/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
           <!-- hsreplaynet.css should come after all Bootstrap CSS -->
           <link href="{% static 'web/hsreplaynet.css' %}" rel="stylesheet">
-          <link href="{% static 'web/home.css' %}" rel="stylesheet">
+          <link href="{% static 'web/index.css' %}" rel="stylesheet">
       {% endblock stylesheets %}
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
