--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -2,7 +2,7 @@
 <html lang="en">
 {% load static from staticfiles %}
 {% load socialaccount %}
-  <head>
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -30,51 +30,40 @@
       <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <nav class="navbar navbar-default" role="navigation">
-        <div class="container-fluid">
-            <div class="navbar-header">
+</head>
+<body>
+	<header>
+	{% block header %}
+		<nav>
+			<a href="/"><img src="{% static 'web/images/logo.png' %}" id="navbar-logo" alt="HSReplay"/><h1>HSReplay</h1></a>
+			<ul class="nav navbar-nav">
+			{% if user.is_authenticated %}
+				<li><a href="{% url 'private_replay_collection' %}">My Replays</a></li>
+			{% endif %}
+			</ul>
 
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#hsreplay-navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a class="navbar-brand" href="/">HSReplay.net</a>
+			<ul class="right">
+			{% if user.is_authenticated %}
+				<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+						<img src="{% static 'web/images/bnet.png' %}"/>
+						<span>Logged in as {{ user.username }}</span> <b class="caret"></b>
+					</a>
+					<ul class="dropdown-menu">
+						<li><a href="{% url 'account_logout' %}">Log Out</a></li>
+					</ul>
+				</li>
+			{% else %}
+				<li><a href="{% provider_login_url "battlenet" %}">
+				<img src="{% static 'web/images/bnet.png' %}"/>
+				<span>Log In with Battle.net</span>
+				</a></li>
+			{% endif %}
+			</ul>
+		</nav>
+	{% endblock %}
+	</header>
 
-            </div>
-
-            <div id="hsreplay-navbar-collapse" class="collapse navbar-collapse">
-                <ul class="nav navbar-nav">
-                    {% if user.is_authenticated %}
-                        <li><a href="{% url 'private_replay_collection' %}">My Replays</a></li>
-                    {% endif %}
-
-                </ul>
-                <ul class="nav navbar-nav navbar-right">
-                    {% if user.is_authenticated %}
-                        <li class="dropdown">
-                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                            <img src="{% static 'web/images/bnet.png' %}"/>
-                            <span>Logged in as {{ user.username }}</span> <b class="caret"></b>
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a href="{% url 'account_logout' %}">Log Out</a></li>
-                        </ul>
-                        </li>
-                    {% else %}
-                        <li><a href="{% provider_login_url "battlenet" %}" class="navbar-link" >
-                            <img src="{% static 'web/images/bnet.png' %}"/>
-                            <span>Log In with Battle.net</span>
-                        </a></li>
-                    {% endif %}
-                </ul>
-            </div>
-
-        </div> <!-- /.container-fluid -->
-</nav>
 	<div id="content">
 	{% block content %}
 	{% endblock content %}
