--- a/hsreplaynet/web/static/web/base.css
+++ b/hsreplaynet/web/static/web/base.css
@@ -10,3 +10,35 @@ body, html{
 	height: calc(100% - 100px);
 	min-height: 500px;
 }
+
+header nav {
+	background-color: #1d3657;
+	border-bottom: 1px solid #1d3657;
+	height: 50px;
+}
+
+#navbar-logo {
+	padding: 8px;
+	height: 50px;
+	width: 40px;
+}
+
+header nav a {
+	color: #ccc;
+}
+header nav a:hover, header nav a:focus {
+	color: white;
+	text-decoration: none;
+}
+
+header nav h1 {
+	display: inline;
+	vertical-align: middle;
+	font-size: 1.5em;
+	text-shadow: 1px 1px black;
+}
+
+header nav ul.right {
+	float: right;
+	padding: 1em;
+}
