Remove navbar from homepage

--- a/hsreplaynet/web/templates/web/home.html
+++ b/hsreplaynet/web/templates/web/home.html
@@ -1,6 +1,10 @@
 {% extends "base.html" %}
 {% load static from staticfiles %}
 {% load socialaccount %}
+
+{% block header %}
+{% endblock %}
+
 {% block content %}
 <div id="main">
 	<header>
