--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -13,6 +13,7 @@
     {% endblock title %}
 
       {% block stylesheets %}
+		  <link href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Raleway:400,700" rel="stylesheet" type="text/css">
           <link href="{% static 'web/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
           <!-- base.css should come after all Bootstrap CSS -->
           <link href="{% static 'web/base.css' %}" rel="stylesheet"/>
@@ -45,13 +46,10 @@
 			<ul class="right">
 			{% if user.is_authenticated %}
 				<li class="dropdown">
-					<a href="#" class="dropdown-toggle" data-toggle="dropdown">
+					<a href="{% url 'account_logout' %}">
 						<img src="{% static 'web/images/bnet.png' %}"/>
-						<span>Logged in as {{ user.username }}</span> <b class="caret"></b>
+						<span>{{ user.username }}</span>
 					</a>
-					<ul class="dropdown-menu">
-						<li><a href="{% url 'account_logout' %}">Log Out</a></li>
-					</ul>
 				</li>
 			{% else %}
 				<li><a href="{% provider_login_url "battlenet" %}">
