--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -20,6 +20,8 @@
           <link href="{% static 'web/index.css' %}" rel="stylesheet"/>
       {% endblock stylesheets %}
 
+    <link rel="shortcut icon" type="image/png" href="{% static  'web/images/favicon.ico' %}"/>
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="{% static 'web/jquery.min.js' %} "></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
