Make copyright year dynamic

--- a/hsreplaynet/templates/base.html
+++ b/hsreplaynet/templates/base.html
@@ -71,7 +71,7 @@
 	<footer>
 		{% block footer %}
 		<p>
-			Copyright &copy; 2015 - <a href="https://hearthsim.info">HearthSim</a>
+			Copyright &copy; {% now 'Y' %} - <a href="https://hearthsim.info">HearthSim</a>
 		</p>
 		<p>
 			<a href="/about/privacy/">Privacy Policy</a> - <a href="/about/tos/">Terms of Service</a>
