--- a/hsreplaynet/web/templates/web/home.html
+++ b/hsreplaynet/web/templates/web/home.html
@@ -10,7 +10,7 @@
 	<header id="promo">
 		<img src="{% static 'web/images/logo.png' %}" id="logo" alt="HSReplay"/>
 		<h1>HSReplay</h1>
-		<h2>Watch and share your Hearthstone replays</h2>
+		<p class="tagline">Watch and share your Hearthstone replays</p>
 		{% if user.is_authenticated %}
 			<p>
 				<a href="{% url 'private_replay_collection' %}" class="promo-button">My Replays</a>
